@@ -13,5 +13,6 @@ clusters:
         image: testuser/arch_base:latest
         priority: 130
         volumes: 
-          '/home/user1/': {'bind': '/mnt/vol2','mode': 'rw'}
-          '/var/www': {'bind': '/mnt/vol1','mode': 'ro'}
+          - /home/user1/:/mnt/vol2:rw
+          - /var/www:/mnt/vol1:ro
+          - /var/ww:/mnt/vol3
