@@ -13,23 +13,9 @@ clusters:
         image: testuser/arch_base:latest
         priority: 300
         ports:
-          - 0.0.0.0:2222:2323
-          - 0.0.0.0:2323:2222
-
-      - name: bind-ports-test02
-        image: testuser/arch_base:latest
-        priority: 300
-        ports:
-          - 0.0.0.0:2323
-      
-      - name: bind-ports-test03
-        image: testuser/arch_base:latest
-        priority: 300
-        ports:
-          - 2323:2323
-
-      - name: bind-ports-test04
-        image: testuser/arch_base:latest
-        priority: 300
-        ports:
-          - 2323
+          - 0.0.0.0:4321:4322
+          - 0.0.0.0:4323:4324
+          - 0.0.0.0:4325
+          - 4326:4327
+          - 4328:4328
+          - 4329
