@@ -55,7 +55,7 @@ clusters:
         image: testuser/netcat:latest
         priority: 550
         ports:
-            1234: None
+          - 1234
         command: "nc -l 1234"
 
       - name: test007
